# lunarglow

./: CMakeLists.txt  README.md  lunarglow.conf
docs/: CMakeLists.txt  README.pod
libgamestream/: CMakeLists.txt  client.c  client.h  discover.c  http.c  http.h  sps.c  sps.h  xml.h
src/: config.c  config.h  configuration.h.in  connection.c  connection.h  cpu.c  cpu.h  loop.c  loop.h  main.c  platform.c  platform.h  sdl.c  sdl.h  util.c  util.h
src/audio/: alsa.c  audio.h  oss.c  pulse.c  sdl.c
src/gamestream/: CMakeLists.txt  discover.h  errors.h  xml.c
src/input/: cec.c  evdev.c  evdev.h  keyboard.h  mapping.c  mapping.h  sdl.c  sdl.h  udev.c  udev.h  x11.c  x11.h
src/video/: egl.c  egl.h  ffmpeg.c  ffmpeg.h  ffmpeg_vaapi.c  ffmpeg_vaapi.h  sdl.c  video.h  x11.c
