cmake_minimum_required(VERSION 3.6)
project(lunarglow VERSION 2.7.1 LANGUAGES C)
SET(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
SET(CMAKE_C_STANDARD 99)
include(${CMAKE_ROOT}/Modules/GNUInstallDirs.cmake)
include(${CMAKE_SOURCE_DIR}/cmake/generate_version_header.cmake)

include(CheckCSourceCompiles)

add_compile_options(-Wall -Wextra -Wno-unused-parameter -Wno-pointer-sign -Wno-sign-compare -Wno-switch)

aux_source_directory(./src SRC_LIST)
list(APPEND SRC_LIST ./src/input/evdev.c ./src/input/mapping.c ./src/input/udev.c)

set(MOONLIGHT_DEFINITIONS)

find_package(ALSA)
find_package(Opus REQUIRED)

find_package(PkgConfig REQUIRED)

option(ENABLE_SDL "Compile SDL support" ON)
option(ENABLE_FFMPEG "Compile FFMPEG support" ON)
option(ENABLE_X11 "Compile X11 support (requires ENABLE_FFMPEG)" ON)
option(ENABLE_PULSE "Compile PulseAudio support" ON)

pkg_check_modules(EVDEV REQUIRED libevdev)
pkg_check_modules(UDEV REQUIRED libudev)
if (ENABLE_SDL)
  pkg_check_modules(SDL sdl2>=2.0.4)
endif()
if (ENABLE_FFMPEG)
  pkg_check_modules(AVCODEC libavcodec)
  pkg_check_modules(AVUTIL libavutil)
  pkg_check_modules(VDPAU vdpau)
  pkg_check_modules(LIBVA libva)
  pkg_check_modules(EGL egl)
  pkg_check_modules(GLES glesv2)

  if (ENABLE_X11)
    pkg_check_modules(XLIB x11)
    pkg_check_modules(LIBVA_X11 libva-x11)
  endif()
endif()
if (ENABLE_PULSE)
  pkg_check_modules(PULSE libpulse-simple)
endif()

set(VDPAU_ACCEL_FOUND FALSE)
set(VA_ACCEL_FOUND FALSE)
set(SOFTWARE_FOUND FALSE)

if(AVCODEC_FOUND AND AVUTIL_FOUND)
  if(EGL_FOUND AND GLES_FOUND AND XLIB_FOUND)
    set(X11_FOUND TRUE)
    if(VDPAU_FOUND)
      set(VDPAU_ACCEL_FOUND TRUE)
    endif()
    if (LIBVA_FOUND AND LIBVA_X11_FOUND)
      set(VA_ACCEL_FOUND TRUE)
    endif()
  endif()
  if(SDL_FOUND OR X11_FOUND)
    set(SOFTWARE_FOUND TRUE)
  endif()
endif()

SET(MOONLIGHT_COMMON_INCLUDE_DIR ./third_party/moonlight-common-c/src)
SET(GAMESTREAM_INCLUDE_DIR ./src/gamestream)

include_directories("${PROJECT_BINARY_DIR}")

add_subdirectory(src/gamestream)

add_executable(lunarglow ${SRC_LIST})
target_link_libraries(lunarglow m)
target_link_libraries(lunarglow gamestream)

if (CMAKE_SYSTEM_NAME MATCHES "FreeBSD")
  set(ALSA_FOUND FALSE)
  target_sources(lunarglow PRIVATE ./src/audio/oss.c)
endif()

check_c_source_compiles("#include <sys/auxv.h>
                         int main(void) { return getauxval(AT_HWCAP); }" HAVE_GETAUXVAL)
if (HAVE_GETAUXVAL)
  list(APPEND MOONLIGHT_DEFINITIONS HAVE_GETAUXVAL)
endif()

check_c_source_compiles("int main(void) { return __builtin_cpu_supports(\"aes\"); }" HAVE_BICS_AES)
if (HAVE_BICS_AES)
  list(APPEND MOONLIGHT_DEFINITIONS HAVE_BICS_AES)
endif()

if (SOFTWARE_FOUND)
  target_sources(lunarglow PRIVATE ./src/video/ffmpeg.c)
  target_include_directories(lunarglow PRIVATE ${AVCODEC_INCLUDE_DIRS} ${AVUTIL_INCLUDE_DIRS})
  target_link_libraries(lunarglow ${AVCODEC_LIBRARIES} ${AVUTIL_LIBRARIES})
  if(SDL_FOUND)
    list(APPEND MOONLIGHT_DEFINITIONS HAVE_SDL)
    list(APPEND MOONLIGHT_OPTIONS SDL)
    target_sources(lunarglow PRIVATE ./src/video/sdl.c ./src/audio/sdl.c ./src/input/sdl.c)
    target_include_directories(lunarglow PRIVATE ${SDL_INCLUDE_DIRS})
    target_link_libraries(lunarglow ${SDL_LIBRARIES})
  endif()
  if(X11_FOUND)
    list(APPEND MOONLIGHT_DEFINITIONS HAVE_X11)
    list(APPEND MOONLIGHT_OPTIONS X11)
    target_sources(lunarglow PRIVATE ./src/video/x11.c ./src/video/egl.c ./src/input/x11.c)
    target_include_directories(lunarglow PRIVATE ${XLIB_INCLUDE_DIRS} ${EGL_INCLUDE_DIRS} ${GLES_INCLUDE_DIRS})
    target_link_libraries(lunarglow ${XLIB_LIBRARIES} ${EGL_LIBRARIES} ${GLES_LIBRARIES})
  endif()
  if(VDPAU_ACCEL_FOUND)
    list(APPEND MOONLIGHT_DEFINITIONS HAVE_VDPAU)
    list(APPEND MOONLIGHT_OPTIONS VDPAU)
    target_include_directories(lunarglow PRIVATE ${VDPAU_INCLUDE_DIRS})
    target_link_libraries(lunarglow ${VDPAU_LIBRARIES})
  endif()
  if(VA_ACCEL_FOUND)
    list(APPEND MOONLIGHT_DEFINITIONS HAVE_VAAPI)
    list(APPEND MOONLIGHT_OPTIONS VAAPI)
    target_sources(lunarglow PRIVATE ./src/video/ffmpeg_vaapi.c)
    target_include_directories(lunarglow PRIVATE ${LIBVA_INCLUDE_DIRS} ${LIBVA_X11_INCLUDE_DIRS})
    target_link_libraries(lunarglow ${LIBVA_LIBRARIES} ${LIBVA_X11_LIBRARIES})
  endif()
endif()

if (ALSA_FOUND)
  list(APPEND MOONLIGHT_DEFINITIONS HAVE_ALSA)
  list(APPEND MOONLIGHT_OPTIONS ALSA)
  target_sources(lunarglow PRIVATE ./src/audio/alsa.c)
  target_include_directories(lunarglow PRIVATE ${ALSA_INCLUDE_DIR})
  target_link_libraries(lunarglow ${ALSA_LIBRARY})
endif()

if (PULSE_FOUND)
  list(APPEND MOONLIGHT_DEFINITIONS HAVE_PULSE)
  list(APPEND MOONLIGHT_OPTIONS PULSE)
  target_sources(lunarglow PRIVATE ./src/audio/pulse.c)
  target_include_directories(lunarglow PRIVATE ${PULSE_INCLUDE_DIRS})
  target_link_libraries(lunarglow ${PULSE_LIBRARIES})
endif()

if(NOT SOFTWARE_FOUND)
  message(FATAL_ERROR "No video output available")
endif()

configure_file("./src/configuration.h.in" "${PROJECT_BINARY_DIR}/configuration.h")

set_property(TARGET lunarglow PROPERTY COMPILE_DEFINITIONS ${MOONLIGHT_DEFINITIONS})
target_include_directories(lunarglow PRIVATE ./src ${GAMESTREAM_INCLUDE_DIR} ${MOONLIGHT_COMMON_INCLUDE_DIR} ${OPUS_INCLUDE_DIRS} ${EVDEV_INCLUDE_DIRS} ${UDEV_INCLUDE_DIRS})
target_link_libraries(lunarglow ${EVDEV_LIBRARIES} ${OPUS_LIBRARY} ${UDEV_LIBRARIES} ${CMAKE_DL_LIBS})

install(TARGETS lunarglow DESTINATION ${CMAKE_INSTALL_BINDIR})
install(FILES ./third_party/SDL_GameControllerDB/gamecontrollerdb.txt DESTINATION ${CMAKE_INSTALL_DATADIR}/lunarglow)
install(FILES lunarglow.conf DESTINATION ${CMAKE_INSTALL_SYSCONFDIR}/lunarglow)
